--- a/QuantumQQTeamApp/Src/Screen1.fx.yaml
+++ b/QuantumQQTeamApp/Src/Screen1.fx.yaml
@@ -30,3 +30,237 @@ Screen1 As screen:
                     Text: ="Text"
                     ZIndex: =2
 
+            Container11_1 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =2
+
+                Label12_1 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_1 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_2 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =3
+
+                Label12_2 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_2 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_3 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =4
+
+                Label12_3 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_3 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_4 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =5
+
+                Label12_4 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_4 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_5 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =6
+
+                Label12_5 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_5 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_6 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =7
+
+                Label12_6 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_6 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_7 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =8
+
+                Label12_7 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_7 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_8 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =9
+
+                Label12_8 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_8 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_9 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =10
+
+                Label12_9 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_9 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_10 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =11
+
+                Label12_10 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_10 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_11 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =12
+
+                Label12_11 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_11 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_12 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =13
+
+                Label12_12 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_12 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
+            Container11_13 As groupContainer.horizontalAutoLayoutContainer:
+                FillPortions: =0
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
+                LayoutMode: =LayoutMode.Auto
+                ZIndex: =14
+
+                Label12_13 As label:
+                    Text: |-
+                        ="Lead Created Date : "
+                    Width: =300
+                    ZIndex: =1
+
+                Label13_13 As label:
+                    FillPortions: =1
+                    Text: ="Text"
+                    ZIndex: =2
+
