--- a/QuantumQQTeamApp/Src/Screen1.fx.yaml
+++ b/QuantumQQTeamApp/Src/Screen1.fx.yaml
@@ -14,6 +14,7 @@ Screen1 As screen:
 
             Container11 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -27,11 +28,12 @@ Screen1 As screen:
 
                 Label13 As label:
                     FillPortions: =1
-                    Text: ="Text"
+                    Text: =glryleadlistLS.Selected.'Created On'
                     ZIndex: =2
 
             Container11_1 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -39,7 +41,7 @@ Screen1 As screen:
 
                 Label12_1 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Lead Status : "
                     Width: =300
                     ZIndex: =1
 
@@ -50,6 +52,7 @@ Screen1 As screen:
 
             Container11_2 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -57,7 +60,7 @@ Screen1 As screen:
 
                 Label12_2 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Lead Status Date : "
                     Width: =300
                     ZIndex: =1
 
@@ -68,6 +71,7 @@ Screen1 As screen:
 
             Container11_3 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -75,7 +79,7 @@ Screen1 As screen:
 
                 Label12_3 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Contract No. : "
                     Width: =300
                     ZIndex: =1
 
@@ -86,6 +90,7 @@ Screen1 As screen:
 
             Container11_4 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -93,7 +98,7 @@ Screen1 As screen:
 
                 Label12_4 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Building Name : "
                     Width: =300
                     ZIndex: =1
 
@@ -104,6 +109,7 @@ Screen1 As screen:
 
             Container11_5 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -111,7 +117,7 @@ Screen1 As screen:
 
                 Label12_5 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Address : "
                     Width: =300
                     ZIndex: =1
 
@@ -122,6 +128,7 @@ Screen1 As screen:
 
             Container11_6 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -129,7 +136,7 @@ Screen1 As screen:
 
                 Label12_6 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Zip code : "
                     Width: =300
                     ZIndex: =1
 
@@ -140,6 +147,7 @@ Screen1 As screen:
 
             Container11_7 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -147,7 +155,7 @@ Screen1 As screen:
 
                 Label12_7 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="No. of Unit : "
                     Width: =300
                     ZIndex: =1
 
@@ -158,6 +166,7 @@ Screen1 As screen:
 
             Container11_8 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -165,7 +174,7 @@ Screen1 As screen:
 
                 Label12_8 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Unit Description : "
                     Width: =300
                     ZIndex: =1
 
@@ -176,6 +185,7 @@ Screen1 As screen:
 
             Container11_9 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -183,7 +193,7 @@ Screen1 As screen:
 
                 Label12_9 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Primary Scope : "
                     Width: =300
                     ZIndex: =1
 
@@ -194,6 +204,7 @@ Screen1 As screen:
 
             Container11_10 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -201,7 +212,7 @@ Screen1 As screen:
 
                 Label12_10 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Secondary Scope : "
                     Width: =300
                     ZIndex: =1
 
@@ -212,6 +223,7 @@ Screen1 As screen:
 
             Container11_11 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -219,7 +231,7 @@ Screen1 As screen:
 
                 Label12_11 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Custom Scope : "
                     Width: =300
                     ZIndex: =1
 
@@ -230,6 +242,7 @@ Screen1 As screen:
 
             Container11_12 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -237,7 +250,7 @@ Screen1 As screen:
 
                 Label12_12 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Estimated Hours : "
                     Width: =300
                     ZIndex: =1
 
@@ -248,6 +261,7 @@ Screen1 As screen:
 
             Container11_13 As groupContainer.horizontalAutoLayoutContainer:
                 FillPortions: =0
+                Height: =50
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
@@ -255,7 +269,7 @@ Screen1 As screen:
 
                 Label12_13 As label:
                     Text: |-
-                        ="Lead Created Date : "
+                        ="Material,Part Number & Other things : "
                     Width: =300
                     ZIndex: =1
 
